[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distracting_control"
version = "0.1.0"
description = ""
requires-python = ">=3.8"
dependencies = [
        'dm-control',
        'absl-py',
        'numpy',
        'mock',
        'pillow',
	'opencv-python'

]


[tool.setuptools]
packages = ["distracting_control"]

